server/.happypack/s--2136306911
SyntaxError: C:/Users/Dmitriy/WebstormProjects/FirstProject/client/reducers/mapReducer.js: Unexpected token (37:37)

[0m [90m 35 | [39m        [36mcase[39m [33mCHANGED_MAP_SOURCE[39m[33m:[39m
 [90m 36 | [39m            let newSource [33m=[39m state[33m.[39msource[33m;[39m
[31m[1m>[22m[39m[90m 37 | [39m            newSource[action[33m.[39mpayload[33m.[39m]
 [90m    | [39m                                     [31m[1m^[22m[39m
 [90m 38 | [39m            [36mreturn[39m {[33m...[39mstate[33m,[39m source[33m:[39m action[33m.[39mpayload }[33m;[39m
 [90m 39 | [39m        [36mcase[39m [33mUPDATE_MAP_SIZE[39m[33m:[39m
 [90m 40 | [39m            [36mreturn[39m {[33m...[39mstate[33m,[39m width[33m:[39m action[33m.[39mpayload[33m.[39mnewWidth[33m,[39m height[33m:[39m action[33m.[39mpayload[33m.[39mnewHeight}[33m;[39m[0m

BabelLoaderError: SyntaxError: C:/Users/Dmitriy/WebstormProjects/FirstProject/client/reducers/mapReducer.js: Unexpected token (37:37)

[0m [90m 35 | [39m        [36mcase[39m [33mCHANGED_MAP_SOURCE[39m[33m:[39m
 [90m 36 | [39m            let newSource [33m=[39m state[33m.[39msource[33m;[39m
[31m[1m>[22m[39m[90m 37 | [39m            newSource[action[33m.[39mpayload[33m.[39m]
 [90m    | [39m                                     [31m[1m^[22m[39m
 [90m 38 | [39m            [36mreturn[39m {[33m...[39mstate[33m,[39m source[33m:[39m action[33m.[39mpayload }[33m;[39m
 [90m 39 | [39m        [36mcase[39m [33mUPDATE_MAP_SIZE[39m[33m:[39m
 [90m 40 | [39m            [36mreturn[39m {[33m...[39mstate[33m,[39m width[33m:[39m action[33m.[39mpayload[33m.[39mnewWidth[33m,[39m height[33m:[39m action[33m.[39mpayload[33m.[39mnewHeight}[33m;[39m[0m

    at transpile (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\babel-loader\lib\index.js:63:13)
    at Object.module.exports (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\babel-loader\lib\index.js:163:20)
    at applySyncOrAsync (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:341:21)
    at apply (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:268:5)
    at C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:131:7
    at applyPitchLoader (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:184:14)
    at applyPitchLoader (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:192:14)
    at applyPitchLoader (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:192:14)
    at applyPitchLoaders (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:222:4)
    at applyLoaders (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:116:3)